namespace MMO
{
	public static class AnimationConstant
	{

		public const string UNIT_ANIMATION_CLIP_RUN = "run";
		public const string UNIT_ANIMATION_CLIP_WALK = "walk";
		public const string UNIT_ANIMATION_CLIP_IDEL = "idle";
		public const string UNIT_ANIMATION_CLIP_DEAD = "dead";
		public const string UNIT_ANIMATION_CLIP_PATROL = "walk";
		public const string UNIT_ANIMATION_CLIP_ATTACK1= "attack1";
		public const string UNIT_ANIMATION_CLIP_ATTACK2= "attack2";
		public const string UNIT_ANIMATION_CLIP_ATTACK3= "attack3";
		public const string UNIT_ANIMATION_CLIP_ATTACK4="attack4";
		public const string UNIT_ANIMATION_CLIP_CAST = "cast";

		public const string UNIT_ANIMATION_PARAMETER_MOVESPEED = "MoveSpeed";
		public const string UNIT_ANIMATION_PARAMETER_RUN = "run";
		public const string UNIT_ANIMATION_PARAMETER_WALK = "walk";
		public const string UNIT_ANIMATION_PARAMETER_DEAD = "dead";
		public const string UNIT_ANIMATION_PARAMETER_PATROL = "walk";
		public const string UNIT_ANIMATION_PARAMETER_ATTACK1= "attack1";
		public const string UNIT_ANIMATION_PARAMETER_ATTACK2= "attack2";
		public const string UNIT_ANIMATION_PARAMETER_ATTACK3= "attack3";
		public const string UNIT_ANIMATION_PARAMETER_ATTACK4="attack4";
		public const string UNIT_ANIMATION_PARAMETER_CAST = "cast";

	}
}